# 2D-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cmake.sh  makefile  setup.sh
inc/engine/converters/: Draw_event_to_dict.h  Sfml_event_to_dict.h
inc/engine/events/: Broadcaster.hpp  Filter_node.hpp
inc/engine/events/interfaces/: Node.h
inc/engine/gui/: Draw_event.h  Resource_manager.h
inc/engine/types/: Dict.h
src/: CMakeLists.txt  main.cpp
src/engine/adapters/: Listener_to_hub.hpp  Shared_to_raw_listener.hpp
src/engine/converters/: Draw_event_to_dict.cpp  Draw_event_to_dict.h  Sfml_enum_to_string.cpp  Sfml_enum_to_string.h  Sfml_event_to_dict.cpp  Sfml_event_to_dict.h
src/engine/events/: Central_hub.hpp  Hub_forwarder.hpp  Lambda_filter.hpp  Lambda_listener.hpp  Lambda_node.hpp  Lambda_receiver.hpp  Listener_hub_adapter.hpp  Receiver_forwarder.hpp
src/engine/events/interfaces/: Filter.h  Hub.h  Listener.h  Subscribable.h
src/engine/gui/: Draw_event.cpp  Draw_event.h  Resource_manager.cpp  Resource_manager.h  Window.cpp  Window.h
src/engine/types/: Dict.cpp  Dict.h
tests/: CMakeLists.txt
tests/engine/events/: Broadcaster.cpp  Lambda_node.cpp
